@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.30  2006-07-29 23:36:21  tino
+# Revision 1.31  2006-10-03 20:26:52  tino
+# Ubuntu has no gawk as awk, so gawk used instead of awk
+#
+# Revision 1.30  2006/07/29 23:36:21  tino
 # Allow VERSIONFILE to be different from $(PROG1)
 #
 # Revision 1.29  2006/07/17 14:37:30  tino
@@ -151,7 +154,7 @@ VERSIONNAME=$(VERSIONFILE)
 #S TINOCOPY
 #R		#p#		\
 
-        AWK=awk
+       GAWK=awk
       TOUCH=touch
 
 # Following prorgrams shall not be needed in future!
@@ -198,7 +201,7 @@ Makefile:	Makefile.md5
 # I cannot make this depend on tino/ as you might not have this directory!
 # I don't want to depend this on a shell either, so I must use AWK!
 Makefile.md5:	$(VERSIONFILE).h always
-	@$(AWK) -vHERE="$(HERE)" -vMAKE="$(MAKE)" -vTINOCOPY="$(TINOCOPY)" 'BEGIN { \
+	@$(GAWK) -vHERE="$(HERE)" -vMAKE="$(MAKE)" -vTINOCOPY="$(TINOCOPY)" 'BEGIN { \
 	if ((getline < "tino/Makefile")>0 && \
 	    (getline < "tino/Makefile.proto")>0 && \
 	    (getline < "tino/Makefile.awk")>-1) \
@@ -208,7 +211,7 @@ Makefile.md5:	$(VERSIONFILE).h always
 	}'
 
 $(VERSIONFILE).h:	VERSION
-	$(AWK) -vPROG="$(VERSIONNAME)" '{ print "#define " toupper(PROG) " \"" $$0 "\"" }' VERSION > "$(VERSIONFILE).h"
+	$(GAWK) -vPROG="$(VERSIONNAME)" '{ print "#define " toupper(PROG) " \"" $$0 "\"" }' VERSION > "$(VERSIONFILE).h"
 
 #C
 #C# Poor man's install
